<resources>
    <string name="app_name">Autiska</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="todo">TODO</string>
    <string name="quizz_mode">Quizz Mode</string>
    <string name="Explaination_mode"> Learn with Fun</string>
    <string name="Fun_to_see">Random Fun</string>
    <string name="suggestions">Suggestions</string>
    <string name="todo1">TODO</string>
    <string name="Learn_bar">Lear and Fun</string>
    <string name="todol">TODO</string>
    <string name="todoi">TODO</string>
</resources>