<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@drawable/balloon_background2">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingPrefix">

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="10sp">


            <LinearLayout
                android:id="@+id/liner"
                android:layout_width="300sp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="125dp"
                android:layout_marginEnd="45dp"
                android:layout_marginRight="45dp"
                android:background="@drawable/picsart_09_26_10_06_35"
                android:clickable="true"
                android:orientation="vertical"
                tools:ignore="UselessParent"
                android:focusable="true">

                <Button
                    android:id="@+id/Quizz_mode"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:background="@drawable/background"
                    android:clickable="true"

                    android:focusable="true"
                    android:text="@string/quizz_mode"
                    android:textColor="#03A9F4"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/Learn_mode"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:background="@drawable/background"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/Explaination_mode"
                    android:textColor="#FF5722"
                    android:textSize="29sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/Random_fun"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:background="@drawable/background"
                    android:clickable="true"
                    android:focusable="true"

                    android:text="@string/Fun_to_see"
                    android:textColor="#F82111"
                    android:textSize="34sp" /><Button
                    android:id="@+id/python"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:background="@drawable/background"
                    android:clickable="true"
                    android:focusable="true"

                    android:text="Python"
                    android:textColor="#F82111"
                    android:textSize="34sp" />


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="176dp"
                    android:layout_height="39dp"


                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginLeft="65dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="65dp"
                    android:text="@string/suggestions"
                    android:textColor="#FBFBFB"
                    android:textSize="30sp" />




            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#78C1CA"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                android:visibility="visible"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/menu_home"
                app:titleTextAppearance="@style/TextAppearance.AppCompat.Display2"
                app:titleTextColor="#FFFFFF"
                tools:ignore="MissingConstraints"
                tools:visibility="visible" />

            <Button
                android:id="@+id/button4"
                android:layout_width="268dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbar"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="18dp"
                android:layout_marginRight="18dp"
                android:text="Hi wanna try something new?"
                android:onClick="showPopup"
                android:background="@color/colorAccent"
                android:visibility="invisible"/>







        </RelativeLayout>


    </ScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>